--- a/shinebuttonlib/build.gradle
+++ b/shinebuttonlib/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.daasuu:EasingInterpolator:1.0.0'
     testImplementation 'junit:junit:4.12'
 }
